Dynamic add BaseCss

--- a/LayoutEditor/Views/Home/Index.cshtml
+++ b/LayoutEditor/Views/Home/Index.cshtml
@@ -52,36 +52,17 @@
                         </div>
                     </li>
                     <li style="display: none;" class="boxes" id="elmBase">
+                        @foreach (var baseCss in Model.AllElements.AllBaseCsses)
+                        {
                         <div class="box box-element ui-draggable">
                             <a href="#close" class="remove label label-important"><i class="icon-remove icon-white"></i>Remove</a> <span class="drag label"><i class="icon-move"></i>Drag</span>
-                            <span class="configuration">
-                                <button type="button" class="btn btn-mini" data-target="#editorModal" role="button" data-toggle="modal">Editor</button>
-                                <span class="btn-group">
-                                    <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#">Align <span class="caret"></span></a>
-                                    <ul class="dropdown-menu">
-                                        <li class="active"><a href="#" rel="">Default</a></li>
-                                        <li class=""><a href="#" rel="text-left">Left</a></li>
-                                        <li class=""><a href="#" rel="text-center">Center</a></li>
-                                        <li class=""><a href="#" rel="text-right">Right</a></li>
-                                    </ul>
-                                </span>
-                                <span class="btn-group">
-                                    <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#">Emphasis <span class="caret"></span></a>
-                                    <ul class="dropdown-menu">
-                                        <li class="active"><a href="#" rel="">Default</a></li>
-                                        <li class=""><a href="#" rel="emphasized">Emphasized</a></li>
-                                        <li class=""><a href="#" rel="emphasized2">Emphasized 2</a></li>
-                                        <li class=""><a href="#" rel="emphasized3">Emphasized 3</a></li>
-                                        <li class=""><a href="#" rel="emphasized4">Emphasized 4</a></li>
-                                        <li class=""><a href="#" rel="emphasized-orange">Emphasized orange</a></li>
-                                    </ul>
-                                </span>
-                            </span>
-                            <div class="preview">Title</div>
+                            @Html.Raw(@baseCss.ConfigurationContent)
+                            <div class="preview">@baseCss.Preview</div>
                             <div class="view">
-                                <h3 contenteditable="true">h3. Lorem ipsum dolor sit amet.</h3>
+                            @Html.Raw(@baseCss.ViewContent)
                             </div>
                         </div>
+                        }
                         <div class="box box-element ui-draggable">
                             <a href="#close" class="remove label label-important"><i class="icon-remove icon-white"></i>Remove</a> <span class="drag label"><i class="icon-move"></i>Drag</span>
                             <span class="configuration">
@@ -203,22 +184,6 @@
                                     <dd>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</dd>
                                 </dl>
                             </div>
-                        </div>
-                        <div class="box box-element ui-draggable">
-                            <a href="#close" class="remove label label-important"><i class="icon-remove icon-white"></i>Remove</a> <span class="drag label"><i class="icon-move"></i>Drag</span>
-                            <span class="configuration">
-                                <span class="btn-group">
-                                    <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#">Styles <span class="caret"></span></a>
-                                    <ul class="dropdown-menu">
-                                        <li class="active"><a href="#" rel="">Default</a></li>
-                                        <li class=""><a href="#" rel="img-rounded">Rounded</a></li>
-                                        <li class=""><a href="#" rel="img-circle">Circle</a></li>
-                                        <li class=""><a href="#" rel="img-polaroid">Polaroid</a></li>
-                                    </ul>
-                                </span>
-                            </span>
-                            <div class="preview">Image</div>
-                            <div class="view"> <img alt="140x140" src="img/a.jpg"> </div>
                         </div>
                         <div class="box box-element ui-draggable">
                             <a href="#close" class="remove label label-important"><i class="icon-remove icon-white"></i>Remove</a> <span class="drag label"><i class="icon-move"></i>Drag</span>
