Add header and format html file

--- a/LayoutEditor/Views/Shared/_Layout.cshtml
+++ b/LayoutEditor/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@ span.fa-2{
     <nav class="navbar navbar-inverse navbar-fixed-top">
               <div class="navbar-header" style="margin-right: 100px;">
         <a class="navbar-brand emphasized3" href="#">
-          Bootstrap Page Builder
+          Layout Editor
         </a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-3">
